# pedidos

./: CMakeLists.txt
src/: catalogo.cpp  catalogo.h  pedido.cpp  pedido.h  produto.cpp  produto.h
tests/: testes_integracao.cpp  testes_unitarios.cpp
tests/mocks/: mock_catalogo.h  mock_pedido.h  mock_produto.h
